# aegis

./: README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
apps/desktop/: Cargo.toml  README.md  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: lib.rs  main.rs
apps/web/: .env.example  README.md  package.json  playwright.config.ts  svelte.config.js
apps/web/e2e/: builder.spec.ts  community-submit.spec.ts  home.spec.ts  import-export.spec.ts  share.spec.ts
apps/web/src/lib/: config.ts  i18n.ts  registry.ts  sprites.ts  supabase.ts
apps/web/src/lib/components/: GuidedView.svelte  SpritePicker.svelte  SubmitModal.svelte  TableView.svelte
apps/web/src/lib/stores/: builderStore.ts  communityStore.ts  customBuildsStore.ts  settingsStore.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/[game_id]/[bo_id]/: +page.svelte  +page.ts
apps/web/src/routes/admin/: +page.svelte
apps/web/src/routes/admin/[id]/: +page.svelte
apps/web/src/routes/builder/: +page.svelte
apps/web/src/routes/community/: +page.svelte
apps/web/src/routes/share/: +page.svelte  +page.ts
apps/web/static/sprites/aoe2/: download-sprites.sh
supabase/migrations/: 001_community_builds.sql  002_fix_anon_grants.sql
